AX: AccessibilityTable::ariaRowCount() and ariaColumnCount() should not return -1 unless that is the author-provided value https://bugs.webkit.org/show_bug.cgi?id=171475

Reviewed by Chris Fleizach.

Source/WebCore:

If the author has provided a valid value, return it. Otherwise, return 0.

No new tests needed. Update existing test expectations to reflect the change.

* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::ariaColumnCount):
(WebCore::AccessibilityTable::ariaRowCount):

LayoutTests:

* accessibility/table-detection-expected.txt: Updated.
* accessibility/table-with-rules-expected.txt: Updated.


Canonical link: https://commits.webkit.org/188396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216009 268f45cc-cd09-0410-ab3c-d52691b4dbfc