Source/WebCore/accessibility/AccessibilityTable.cpp
@@ -671,12 +671,14 @@ int AccessibilityTable::ariaColumnCount() const
     const AtomicString& colCountValue = getAttribute(aria_colcountAttr);
     
     int colCountInt = colCountValue.toInt();
-    // If only a portion of the columns is present in the DOM at a given moment, this attribute is needed to
-    // provide an explicit indication of the number of columns in the full table.
-    if (colCountInt > (int)m_columns.size())
+    // The ARIA spec states, "Authors must set the value of aria-colcount to an integer equal to the
+    // number of columns in the full table. If the total number of columns is unknown, authors must
+    // set the value of aria-colcount to -1 to indicate that the value should not be calculated by
+    // the user agent." If we have a valid value, make it available to platforms.
+    if (colCountInt == -1 || colCountInt >= (int)m_columns.size())
         return colCountInt;
     
-    return -1;
+    return 0;
 }
 
 int AccessibilityTable::ariaRowCount() const
@@ -684,12 +686,14 @@ int AccessibilityTable::ariaRowCount() const
     const AtomicString& rowCountValue = getAttribute(aria_rowcountAttr);
     
     int rowCountInt = rowCountValue.toInt();
-    // If only a portion of the rows is present in the DOM at a given moment, this attribute is needed to
-    // provide an explicit indication of the number of rows in the full table.
-    if (rowCountInt > (int)m_rows.size())
+    // The ARIA spec states, "Authors must set the value of aria-rowcount to an integer equal to the
+    // number of rows in the full table. If the total number of rows is unknown, authors must set
+    // the value of aria-rowcount to -1 to indicate that the value should not be calculated by the
+    // user agent." If we have a valid value, make it available to platforms.
+    if (rowCountInt == -1 || rowCountInt >= (int)m_rows.size())
         return rowCountInt;
     
-    return -1;
+    return 0;
 }
 
 } // namespace WebCore
